--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -23,7 +23,7 @@
               {% csrf_token %}
               {% if error %}
                 <div class="form-group has-error">
-                  <spawn class="help-block">{{ error }}</span>
+                  <span class="help-block">{{ error }}</span>
                 </div>
               {% endif %}
             </form>
